# people-detection

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
people_detection/: __main__.py  services.py
people_detection/config/: settings.py
people_detection/services/: bot.py  detection.py  messages.py
